Fixed NCSLT-1023 issue by introducing new css class for card min height. Also reduced the gap size between cards in get the jump page.

--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/ypfc.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/ypfc.scss
@@ -621,7 +621,7 @@
     @media only screen and (min-width: 769px) {
         .govuk-grid-row {
             padding: 0;
-            margin-top: 50px;
+            margin-top: 20px;
         }
 
         .ypfc-box {
