--- a/src/gds_service_toolkit/assets/src/frontend/sass/includes/_homepage.scss
+++ b/src/gds_service_toolkit/assets/src/frontend/sass/includes/_homepage.scss
@@ -143,7 +143,7 @@ body.hasHover {
 }
 .card-group {
 	.card {
-		min-height: 140px;
+		min-height: 170px;
 		background: #f3f2f1;
 		padding: 10px;
 		margin-bottom:15px;
